crates/aranya-policy-lang/tests/data/policy_test.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 89 column 1:   --> 89:1
   |
89 | }
   | ^---
   |
   = expected seal_block
